# noottools

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  docker-compose.yml  package-lock.json  package.json  replit.md  tailwind.config.ts
attached_assets/: Pasted-Coolify-v4-0-0-beta-426-9-Current-Team-Root-Team-Dashboard-Projects-Servers-Sources-Dest-1757432400522_1757432400523.txt  Pasted-Coolify-v4-0-0-beta-426-9-Current-Team-Root-Team-Dashboard-Projects-Servers-Sources-Dest-1757432735950_1757432735951.txt  Pasted-Coolify-v4-0-0-beta-426-9-Current-Team-Root-Team-Dashboard-Projects-Servers-Sources-Dest-1757433374838_1757433374839.txt  Pasted-Coolify-v4-0-0-beta-426-9-Current-Team-Root-Team-Dashboard-Projects-Servers-Sources-Dest-1757433641737_1757433641738.txt  Pasted-Coolify-v4-0-0-beta-426-9-Current-Team-Root-Team-Dashboard-Projects-Servers-Sources-Dest-1757433908862_1757433908864.txt  Pasted-Eres-un-ingeniero-principal-Crea-un-monorrepo-llamado-noottools-para-Solana-con-TECNOLOG-A-1757425701488_1757425701490.txt  Pasted-Resumen-en-una-frase-Un-lanzador-de-tokens-en-Solana-SPL-Token-2022-que-crea-pools-de-liquidez-pr-1757428354678_1757428354679.txt  Pasted-Un-lanzador-de-tokens-en-Solana-SPL-Token-2022-que-crea-pools-de-liquidez-preconfigurados-Raydium-1757434555800_1757434555802.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx  polyfills.ts
programs/anti-sniper-hook/: Cargo.toml
programs/anti-sniper-hook/src/: lib.rs
scripts/: deploy.sh
server/: index.prod.ts  index.ts  production.ts  routes.ts  storage.ts
shared/: schema.ts
(+26 files in other folders)
